--- a/CodingOnCountry/Views/Home/Index.cshtml
+++ b/CodingOnCountry/Views/Home/Index.cshtml
@@ -73,7 +73,7 @@
 
 
     <!-- Warning Bar //////////////////////////////////////////////////////////////////////////////////////////////////////-->
-    <div class="warning" id="warning">
+    <div class="warning warning_prev" id="warning">
         <p><b>Warning:</b> Aboriginal and Torres Strait Islander viewers are warned that this site may contain images and voices of deceased persons.</p>
         <a class="warning_close" onclick="closeWarning()">X</a>
     </div>
