--- a/CodingOnCountry/Views/Camps/Details.cshtml
+++ b/CodingOnCountry/Views/Camps/Details.cshtml
@@ -4,6 +4,19 @@
     ViewData["Title"] = "Details";
 }
 
+<environment include="Development">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="~/css/style.css" />
+    <link rel="stylesheet" href="~/css/all.min.css" />
+    <link rel="stylesheet" href="~/css/modal.css" />
+    <link rel="stylesheet" href="../css/slideshow.css">
+
+    <script src="~/js/gallery.js"></script>
+    <script src="~/js/script.js"></script>
+    <script src="~/js/slideshow.js"></script>
+</environment>
+
 <h1>Details</h1>
 
 <div>
