--- a/CodingOnCountry/wwwroot/css/style.css
+++ b/CodingOnCountry/wwwroot/css/style.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700');
-
 * {
     margin: 0;
     padding: 0;
@@ -9,15 +8,18 @@
 :root {
     --main-colour-light: #f2f2f2;
     --main-colour-dark: #333;
-    --sub-colour-dark: rgba(156, 56, 23,1.0);
+    --sub-colour-dark: rgba(156, 56, 23, 1.0);
     --btn-hover-colour: rgba(156, 56, 23, 0.3);
     --grad-colour-start: rgb(173, 116, 59);
     --grad-colour-end: rgba(242, 217, 104, 0.5);
-    --blog-colour-start: rgb(255, 183, 0);
-    --blog-colour-end: rgb(255, 234, 0);
+    --blog-colour-start: rgb(177, 65, 31);
+    --blog-colour-end: rgb(175, 102, 19);
     --light-accent: rgb(227, 196, 150);
-    --drop-shadow: rgb(255, 158, 97);
+    --drop-shadow: rgba(33, 38, 41, .5);
+
+    --temp: #ed6c39;
 }
+
 
 /* Default Html Tags //////////////////////////////////////////////////////////////////////////////*/
 
@@ -36,7 +38,10 @@ header {
     margin: 0 auto;
 }
 
-h1, h2, h3, h4 {
+h1,
+h2,
+h3,
+h4 {
     margin: 0;
     font-size: 50pt;
     color: var(--sub-colour-dark);
@@ -48,7 +53,8 @@ h2 {
     margin-bottom: 30px;
 }
 
-h3, h4 {
+h3,
+h4 {
     font-size: 25pt;
     margin-bottom: 25px;
 }
@@ -57,6 +63,11 @@ a {
     transition: all .5s;
     text-decoration: none;
     color: var(--main-colour-light);
+}
+
+a:hover
+{
+    color: var(--main-colour-dark);
 }
 
 img {
@@ -73,10 +84,13 @@ footer {
     max-height: 50vh;
     color: var(--main-colour-light);
     background-color: var(--main-colour-dark);
-    text-align:left;
+    text-align: left;
 }
 
+
 /*/////////////////////////////////////////////////////////////////////////////////////////////////*/
+
+
 /* General ////////////////////////////////////////////////////////////////////////////////////////*/
 
 .baseButton {
@@ -104,49 +118,60 @@ footer {
 
 
 /*/////////////////////////////////////////////////////////////////////////////////////////////////*/
+
+
 /* The navigation bar /////////////////////////////////////////////////////////////////////////////*/
 
 .navbar {
     overflow: hidden;
     background-color: var(--main-colour-dark);
-    position: fixed; /* Set the navbar to fixed position */
+    position: fixed;
+    /* Set the navbar to fixed position */
     z-index: 999;
-    top: 0; /* Position the navbar at the top of the page */
+    top: 0;
+    /* Position the navbar at the top of the page */
     left: 0;
-    width: 100vw; /* Full width */
+    width: 100vw;
+    /* Full width */
     text-align: center;
 }
 
-    /* Links inside the navbar */
-    .navbar a {
-        background: inherit;
-        float: left;
-        display: block;
-        color: var(--light-accent);
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-    }
+
+/* Links inside the navbar */
+
+.navbar a {
+    background: inherit;
+    float: left;
+    display: block;
+    color: var(--light-accent);
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
 
 @keyframes background_animation {
     0% {
         background: linear-gradient(0deg, var(--grad-colour-start) 0%, var(--grad-colour-end)0%);
     }
-
     100% {
         background: linear-gradient(0deg, var(--grad-colour-start) 0%, var(--grad-colour-end)100%);
     }
 }
 
+
 /* Change background on mouse-over */
+
 .navbar a:hover {
     animation: background_aniatmion 125ms linear;
-    background: linear-gradient(0deg, var(--grad-colour-start) 0%, var(--grad-colour-end)100%); /*#ddd;*/
+    background: linear-gradient(0deg, var(--grad-colour-start) 0%, var(--grad-colour-end)100%);
+    /*#ddd;*/
     color: var(--main-colour-light);
 }
 
 
 /*/////////////////////////////////////////////////////////////////////////////////////////////////*/
+
+
 /* Image Warning Bar //////////////////////////////////////////////////////////////////////////////*/
 
 .warning {
@@ -157,10 +182,15 @@ footer {
     position: fixed;
     z-index: 999;
     width: 100vw;
-    background: linear-gradient(45deg, var(--grad-colour-start) 0%,var(--grad-colour-end) 100%);
+    background: linear-gradient(45deg, var(--grad-colour-start) 0%, var(--grad-colour-end) 100%);
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+.warning_prev
+{
+    display: none;
 }
 
 .warning p {
@@ -179,18 +209,19 @@ footer {
     color: white;
 }
 
-.warning.warning_close:active{
+.warning.warning_close:active {
     display: none;
 }
 
 
 /*/////////////////////////////////////////////////////////////////////////////////////////////////*/
+
+
 /* Home header/hero Section ///////////////////////////////////////////////////////////////////////*/
 
 .hero-image {
     /* Use "linear-gradient" to make text more readable.*/
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/Temp/hero.jpg");
-    
     height: 100vh;
     width: 100%;
     right: 200%;
@@ -204,7 +235,9 @@ footer {
     margin-bottom: 70pt;
 }
 
+
 /* Place text in the middle of the image */
+
 .heroContent {
     padding-top: 30px;
     text-align: center;
@@ -226,14 +259,17 @@ footer {
     margin: 40px 0;
 }
 
+
 /*/////////////////////////////////////////////////////////////////////////////////////////////////*/
+
+
 /* Home About Section /////////////////////////////////////////////////////////////////////////////*/
 
 #home-info {
     display: flex;
     width: 100%;
     height: 70vh;
-    text-anchor: center;
+    text-anchor: middle;
     flex-wrap: wrap;
     padding-top: 100px;
 }
@@ -253,8 +289,9 @@ footer {
 }
 
 
-
 /*/////////////////////////////////////////////////////////////////////////////////////////////////*/
+
+
 /* Camp Blogs /////////////////////////////////////////////////////////////////////////////////////*/
 
 .blogContainer {
@@ -267,45 +304,44 @@ footer {
     text-align: center;
     width: 90%;
     height: auto;
-
-    align-content:center;
+    align-content: center;
 }
 
 .singleBlog {
     position: relative;
     overflow: hidden;
-
     height: 50vh;
     width: 15vw;
     max-height: 400px;
-    min-width: 230;
+    min-width: 230px;
     box-sizing: border-box;
     box-shadow: 3px 3px 10px var(--drop-shadow);
     margin: 10px;
-
     transition: all .5s;
-    background: linear-gradient(45deg, var(--blog-colour-start) 0%,var(--blog-colour-end) 100%);
+    background: linear-gradient(45deg, var(--blog-colour-start) 0%, var(--blog-colour-end) 100%);
     border-radius: 10px;
 }
 
-    .singleBlog:hover {
-        box-shadow: 3px 3px 13px var(--drop-shadow);
-        transition: all .5s;
-    }
+.singleBlog:hover {
+    box-shadow: 3px 3px 13px var(--drop-shadow);
+    transition: all .5s;
+}
 
-        .singleBlog:hover img {
-            transform: scale(1.1);
-            transition: all .4s;
-        }
+.singleBlog:hover img {
+    transform: scale(1.1);
+    transition: all .4s;
+}
 
-        .singleBlog:hover .campContent {
-            bottom: 0;
-            transition: all .5s;
-        }
+.singleBlog:hover .campContent {
+    bottom: 0;
+    transition: all .5s;
+}
+
 
 /* Camp Content////////////////////////////////////////////////////////////////////////////////////*/
 
-.campContent { /* Section title, author, date, etc. */
+.campContent {
+    /* Section title, author, date, etc. */
     position: relative;
     height: 85%;
     display: flex;
@@ -321,34 +357,34 @@ footer {
     transition: all .5s;
 }
 
-    .campContent h3 {
-        font-size: 16pt;
-        font-weight: 500;
-        margin: 0;
-        color: var(--main-colour-light);
-    }
+.campContent h3 {
+    font-size: 16pt;
+    font-weight: 500;
+    margin: 0;
+    color: var(--main-colour-light);
+}
 
-    .campContent h4 {
-        display: block;
-        font-size: 12pt;
-        margin: 5px 0 5px 0;
-        font-weight: 600;
-        font-weight: 300;
-        color: var(--main-colour-light);
-    }
+.campContent h4 {
+    display: block;
+    font-size: 12pt;
+    margin: 5px 0 5px 0;
+    font-weight: 600;
+    font-weight: 300;
+    color: var(--main-colour-light);
+}
 
-    .campContent a {
-        font-size: 13pt;
-        font-weight: 500;
-    }
+.campContent a {
+    font-size: 13pt;
+    font-weight: 500;
+}
 
-    .campContent p {
-        margin-bottom: 0;
-    }
+.campContent p {
+    margin-bottom: 0;
+}
 
-    .campContent a:hover {
-        text-decoration: none;
-    }
+.campContent a:hover {
+    text-decoration: none;
+}
 
 .blogDate {
     font-size: 10pt;
@@ -365,9 +401,9 @@ footer {
     width: 100vw;
 }
 
-    .campHeader h2 {
-        margin-right: 30px;
-    }
+.campHeader h2 {
+    margin-right: 30px;
+}
 
 .minorHeader {
     font-size: 25pt;
@@ -376,11 +412,11 @@ footer {
     display: none;
 }
 
-    .minorHeader:hover {
-        opacity: 1;
-        transition: all .5s;
-        cursor: pointer;
-    }
+.minorHeader:hover {
+    opacity: 1;
+    transition: all .5s;
+    cursor: pointer;
+}
 
 #pastCamps {
     display: none;
@@ -406,17 +442,16 @@ footer {
     width: 80%;
 }
 
-.btn:hover, .btnViewAll:hover {
+.btn:hover,
+.btnViewAll:hover {
     background: var(--btn-hover-colour);
     transition: all .5s;
     text-decoration: none;
     cursor: pointer;
 }
 
+
 /* Camp Gallery ///////////////////////////////////////////////////////////////////////////////////*/
-
-
-
 
 .staticGallery img {
     padding: 0;
@@ -437,10 +472,11 @@ footer {
     filter: grayscale(30%);
     border-radius: 10px;
     transform: scale(1.1);
-    cursor:pointer;
+    cursor: pointer;
 }
 
-.albumPreview, .albumThird {
+.albumPreview,
+.albumThird {
     position: relative;
     height: 80%;
     width: 20%;
@@ -451,16 +487,18 @@ footer {
     z-index: 1;
 }
 
-.headSecond, .headThird {
+.headSecond,
+.headThird {
     z-index: 2;
     border-radius: 10px;
-    background-color: rgba(0,0,0,0.7);
+    background-color: rgba(0, 0, 0, 0.7);
     padding: 10px;
     margin-left: -10px;
     width: 70%;
 }
 
-.frameSample, .frameThird {
+.frameSample,
+.frameThird {
     width: 200%;
     position: absolute;
     top: -20%;
@@ -483,9 +521,9 @@ footer {
     padding: 0;
 }
 
-    .albumThird img {
-        object-fit: cover;
-    }
+.albumThird img {
+    object-fit: cover;
+}
 
 .linkThird {
     border: none;
@@ -497,16 +535,15 @@ footer {
     padding-top: 7%;
 }
 
-    .linkThird:hover {
-        cursor: pointer;
-    }
+.linkThird:hover {
+    cursor: pointer;
+}
 
 .campThird:hover {
     background: var(--btn-hover-colour);
     cursor: pointer;
     transition: all .5s;
 }
-
 
 .individualGallery {
     max-width: 1300px;
@@ -541,7 +578,7 @@ footer {
 
 .fbFrame {
     margin: 20px;
-    margin-left: 100;
+    margin-left: 100px;
     width: calc(50% - 140px);
     max-width: 500px;
 }
@@ -579,7 +616,8 @@ footer {
     display: none;
 }
 
-#menu, #close {
+#menu,
+#close {
     float: right;
     margin-right: 50px;
     color: var(--light-accent);
@@ -595,8 +633,72 @@ footer {
 }
 
 
+/*/////////////////////////////////////////////////////////////////////////////////////////////////*/
+
+
+/* Input/Forms ///////////////////////////////////////////////////////////////////////////////////*/
+
+form {
+    text-align: left;
+    margin: 1% 25%;
+}
+
+
+.form-group, form > div{
+    display: flex;
+    text-align: center;
+    overflow: hidden;
+    padding: 0;
+    width: 100%;
+    margin: 2% 0;
+}
+
+
+.form-group > label, .control-label {
+    text-align: left;
+    display:inline-block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 100%;
+    height: 1.5em;
+}
+
+.form-group > input, .form-control {
+    transition: border 125ms linear;
+    margin: 0 auto;
+    border-radius: 15px;
+    border: 1px solid var(--main-colour-dark);
+    padding: 0 1%;
+    outline: none;
+    height: 1.5em;
+    width: 97.5%;
+}
+
+.fileUpload
+{
+    flex-direction: column;
+}
+
+
+input[type=submit]
+{
+    width: 100%;
+}
+
+.text-danger
+{
+    color: var(--temp);
+}
+
+.form-control:hover, .form-control:focus
+{
+    border: 1px solid var(--temp);
+}
+
 
 /*/////////////////////////////////////////////////////////////////////////////////////////////////*/
+
+
 /* Footer /////////////////////////////////////////////////////////////////////////////////////////*/
 
 #fbFooter {
@@ -606,7 +708,6 @@ footer {
     margin-left: 30px;
     text-align: right;
     flex-wrap: wrap;
-   
 }
 
 #fbFooter p {
@@ -618,9 +719,6 @@ footer {
     max-width: calc(100vw - 60px);
     padding-top: 10px;
 }
-
-
-
 
 #rawCampList {
     display: none;
@@ -641,10 +739,63 @@ footer {
 }
 
 
+/*/////////////////////////////////////////////////////////////////////////////////////////////////*/
 
+
+/* Admin /////////////////////////////////////////////////////////////////////////////////////////*/
+main * 
+{
+    margin: 1% 0;
+}
+
+.table
+{
+    text-align: left;
+}
+
+.tableContents
+{
+    display: flex;
+}
+
+.tableContents > b
+{
+    padding: .15em 0;
+    color: var(--main-colour-light);
+    background-color: var(--main-colour-dark);
+}
+.tableContents > span
+{
+    background-color: var(--main-colour-light);
+}
+
+.tableContents > b, .tableContents > span
+{
+    border-bottom: .25px solid rgba(51, 51, 51, .5);
+    text-align: center;
+    text-overflow: ellipsis;
+    width: 12.5%;
+}
+.controls
+{
+    text-align: center;
+}
+.controls > a, .tableContents > span > a
+{
+    transition: 150ms linear color;
+    width: 33%;
+    color: var(--main-colour-dark);
+}
+
+.controls > a:hover, .tableContents > span > a:hover
+{
+    color: var(--temp);
+}
 
 
 /*/////////////////////////////////////////////////////////////////////////////////////////////////*/
+
+
 /* Media Queries //////////////////////////////////////////////////////////////////////////////////*/
 
 @media (max-width:992px) {
@@ -652,41 +803,34 @@ footer {
         grid-template-columns: repeat(3, 1fr);
         grid-gap: 20px;
     }
+    form
+    {
+        margin: 0 1%;
+    }
 }
 
-@media (max-width: 833px){
+@media (max-width: 833px) {
     .singleBlog {
         width: calc(50vw - 100px);
     }
 }
 
-
 @media (max-width:769px) {
-    
-
     header {
         width: 95%;
     }
-
     .campContent {
         bottom: 0;
     }
-
     #home-video {
         width: 87%;
     }
-
     #home-video-info {
         width: 80%;
     }
-
     .minorHeader {
         display: none;
     }
-
-
-
-
     .staticGallery {
         width: 100vw;
         height: 100%;
@@ -698,38 +842,32 @@ footer {
         justify-content: center;
         overflow: hidden;
     }
-
     .campDetails {
         width: 100vw;
         text-align: center;
         padding: 0;
         padding-bottom: 50px;
     }
-
     .galleryMain {
         height: auto;
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
     }
-
     .fbFrame {
         width: calc(100vw - 40px);
         margin: 0;
         margin-right: calc((100vw - 500px)/2);
     }
-
     .fbGallery {
         margin: 0;
     }
-
     .navbar a {
         width: 100%;
         height: 5vh;
         font-size: 20pt;
         padding-top: 2vh;
     }
-
     .navbar {
         display: none;
         top: 47px;
@@ -737,41 +875,33 @@ footer {
         height: calc(100vh - 47px);
         z-index: 1600;
     }
-
     .mobNav {
         display: initial;
     }
-
     .mobileBack {
         display: initial;
     }
-
     .backButton {
         display: none;
     }
-
     #fbFooter {
         text-align: left;
     }
- 
 }
 
 @media (max-width:630px) {
-
     .staticGallery img {
         width: 100px;
         height: 100px;
     }
-
     .fbFrame {
         margin: 0 auto;
         padding: 0;
         width: 100vw;
     }
-
 }
 
-@media (max-width: 555px){
+@media (max-width: 555px) {
     .singleBlog {
         height: 60vh;
         max-height: 60vh;
@@ -780,18 +910,13 @@ footer {
 }
 
 @media (max-width:500px) {
-
     #fbFooter p {
         text-align: left;
     }
-
     .albumThird {
         height: 85%;
     }
-
     .fbGallery {
         margin: 0;
     }
-
-    
 }
